--- a/src/components/ImageText/index.scss
+++ b/src/components/ImageText/index.scss
@@ -53,13 +53,7 @@ $max-width: 700px;
     img {
       width: 80%;
       max-width: $max-width;
-    }
-  }
-
-  .image-text-container {
-    img {
-      padding-right: 0;
-      padding-left: 0;
+      padding: 0;
     }
   }
 }
